[gd_scene load_steps=4 format=3 uid="uid://bf4vt234fvtpp"]

[ext_resource type="Script" uid="uid://b6fihh5ww34p" path="res://components/pre-game/pre_game_ui.gd" id="1_5e81d"]
[ext_resource type="PackedScene" uid="uid://24qjy78bw8hb" path="res://components/racetrack/racetrack.tscn" id="1_bbs4h"]
[ext_resource type="PackedScene" uid="uid://c0c54hoas1p1n" path="res://components/pre-game/popup/popup.tscn" id="2_tw0f8"]

[node name="PreGame" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PreGame" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_5e81d")

[node name="BottomBar" type="VBoxContainer" parent="CanvasLayer/PreGame"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
theme_override_constants/separation = 10

[node name="Top" type="HBoxContainer" parent="CanvasLayer/PreGame/BottomBar"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel2" type="Panel" parent="CanvasLayer/PreGame/BottomBar/Top"]
self_modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="CashLabel" type="Label" parent="CanvasLayer/PreGame/BottomBar/Top/Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Cash: 000"
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel3" type="Panel" parent="CanvasLayer/PreGame/BottomBar/Top"]
self_modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="CanvasLayer/PreGame/BottomBar/Top/Panel3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Speed: 00"
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel4" type="Panel" parent="CanvasLayer/PreGame/BottomBar/Top"]
self_modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="RepairLabel" type="Label" parent="CanvasLayer/PreGame/BottomBar/Top/Panel4"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Repair: 00"
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel5" type="Panel" parent="CanvasLayer/PreGame/BottomBar/Top"]
self_modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="InvLabel" type="Label" parent="CanvasLayer/PreGame/BottomBar/Top/Panel5"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory: 00"
vertical_alignment = 1
autowrap_mode = 2

[node name="Bot" type="HBoxContainer" parent="CanvasLayer/PreGame/BottomBar"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SpeedButton" type="Button" parent="CanvasLayer/PreGame/BottomBar/Bot"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Speed
- 5 cash"

[node name="RepairButton" type="Button" parent="CanvasLayer/PreGame/BottomBar/Bot"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Speed
- 5 cash"

[node name="InvButton" type="Button" parent="CanvasLayer/PreGame/BottomBar/Bot"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Speed
- 5 cash"

[node name="Panel" type="Panel" parent="CanvasLayer/PreGame/BottomBar/Bot"]
self_modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PreGame/BottomBar/Bot/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on the map to buy/add restocking points (cost scales)"
autowrap_mode = 2

[node name="RestockPriceLabel" type="Label" parent="CanvasLayer/PreGame/BottomBar/Bot/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Cost of next point: 00"
vertical_alignment = 2
autowrap_mode = 2

[node name="ResetRestockingButton" type="Button" parent="CanvasLayer/PreGame/BottomBar/Bot"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset restocking points"

[node name="Padding" type="Control" parent="CanvasLayer/PreGame/BottomBar/Bot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="CanvasLayer/PreGame/BottomBar/Bot"]
unique_name_in_owner = true
layout_mode = 2
text = "START
RACE"

[node name="Popup" parent="CanvasLayer/PreGame" instance=ExtResource("2_tw0f8")]
unique_name_in_owner = true
layout_mode = 1

[node name="Racetrack" parent="." instance=ExtResource("1_bbs4h")]
car_amount = 0
demo = true

[node name="RestockingPoints" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(537, -24)
zoom = Vector2(0.185, 0.185)

[connection signal="gui_input" from="CanvasLayer/PreGame" to="CanvasLayer/PreGame" method="_on_gui_input"]
[connection signal="pressed" from="CanvasLayer/PreGame/BottomBar/Bot/SpeedButton" to="CanvasLayer/PreGame" method="upgrade_bought" binds= [&"speed"]]
[connection signal="pressed" from="CanvasLayer/PreGame/BottomBar/Bot/RepairButton" to="CanvasLayer/PreGame" method="upgrade_bought" binds= [&"repair"]]
[connection signal="pressed" from="CanvasLayer/PreGame/BottomBar/Bot/InvButton" to="CanvasLayer/PreGame" method="upgrade_bought" binds= [&"inventory"]]
[connection signal="pressed" from="CanvasLayer/PreGame/BottomBar/Bot/ResetRestockingButton" to="CanvasLayer/PreGame" method="_on_reset_restocking_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PreGame/BottomBar/Bot/StartButton" to="CanvasLayer/PreGame" method="_on_start_button_pressed"]
